yaml-tests/src/test/resources/include-block/shouldPass/multiple-includes.yamsql
#
# multiple-includes.yamsql
#
# This source file is part of the FoundationDB open source project
#
# Copyright 2021-2026 Apple Inc. and the FoundationDB project authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This test should pass
---
schema_template:
    create table t1(id bigint, col1 bigint, primary key(id))
---
include:
    include-block/includes/include-with-explain.yamsql
---
include:
    include-block/includes/include-with-a-test-block.yamsql
...
